делает ресет и контейнер

--- a/index.html
+++ b/index.html
@@ -21,29 +21,31 @@
     <!-- Шапка страницы -->
     <header>
         
-        <!-- логотип и навигация -->
-        <nav>
+        <div class="container">
+            <!-- логотип и навигация -->
+            <nav>
 
-            <a href="/" class="logo">
-                Web<span class="nav-logo">Studio</span>
-            </a>
+                <a href="/" class="logo">
+                    Web<span class="nav-logo">Studio</span>
+                </a>
 
-            <ul class="site-nav list">
-                <li><a href="" class="link current">Студия</a></li>
-                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-                <li><a href="" class="link">Контакты</a></li>
+                <ul class="site-nav list">
+                    <li><a href="" class="link current">Студия</a></li>
+                    <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li><a href="" class="link">Контакты</a></li>
+                </ul>
+
+            </nav>
+
+            <ul class="nav-contacts list">
+                <li>
+                    <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+                </li>
             </ul>
-
-        </nav>
-
-        <ul class="nav-contacts list">
-            <li>
-                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-            </li>
-        </ul>
+        </div>
 
     </header>
 
