--- a/index.html
+++ b/index.html
@@ -19,31 +19,32 @@
 
 <body>
     <!-- Шапка страницы -->
-    <header>
+    <header class="header">
         
-        <div class="container">
+        <div class="container cont-header">
             <!-- логотип и навигация -->
-            <nav>
+            <nav class="nav">
 
                 <a href="/" class="logo">
                     Web<span class="nav-logo">Studio</span>
                 </a>
 
                 <ul class="site-nav list">
-                    <li><a href="" class="link current">Студия</a></li>
-                    <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-                    <li><a href="" class="link">Контакты</a></li>
+                    <li class="item"><a href="" class="link current">Студия</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li class="item"><a href="" class="link">Контакты</a></li>
                 </ul>
 
             </nav>
 
             <ul class="nav-contacts list">
-                <li>
+                <li class="item">
                     <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
                 </li>
-                <li>
+                <li class="item">
                     <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
                 </li>
+                
             </ul>
         </div>
 
