--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <main>
         <!-- Герой -->
-        <section class="hero">
+        <section class="section hero">
             <h1 class="hero-title">Эффективные решения<br /> для вашего бизнеса</h1>
             <button type="button" class="hero-btn">Заказать услугу</button>
         </section>
