оформляет секцию команда

--- a/index.html
+++ b/index.html
@@ -91,67 +91,51 @@
         </section>
 
         <!-- Чем мы занимаемся-->
-        <section class="work">
-            <h2 class="work-title">Чем мы занимаемся</h2>
-            <ul class="list">
-                <li>
-                        <img src="./images/markup.jpg"
-                        alt="разметка" 
-                        width="370" 
-                        height="294">
-                </li>
-                <li>
-                        <img src="./images/phones.jpg" alt="верстка под телефоны"
-                        width="370" 
-                        height="294">
-                </li>
-                <li>
-                        <img src="./images/tablet.jpg"
-                        alt="верстка под телефоны" 
-                        width="370" 
-                        height="294">
-                </li>
-
-            </ul>
+        <section class="section work">
+           <div class="container">
+                <h2 class="work-title">Чем мы занимаемся</h2>
+                <ul class="list">
+                    <li class="work-item">
+                        <img src="./images/markup.jpg" alt="разметка" width="370" height="294" class="work-img">
+                    </li>
+                    <li class="work-item">
+                        <img src="./images/phones.jpg" alt="верстка под телефоны" width="370" height="294" class="work-img">
+                    </li>
+                    <li class="work-item">
+                        <img src="./images/tablet.jpg" alt="верстка под телефоны" width="370" height="294" class="work-img" >
+                    </li>
+                
+                </ul>
+           </div>
         </section>
 
         <!-- Команда разработчиков -->
-        <section class="command">
-            <h2 class="command-title">Наша команда</h2>
-            <ul class="command-item list">
-                <li>
-                    <img src="./images/igor.jpg" 
-                    alt="Игорь Демьяненко"
-                    width="270"
-                    height="260">
-                    <h3 class="command-name">Игорь Демьяненко</h3>
-                    <p class="command-name skills">Product Designer</p>
-                </li>
-                <li>
-                    <img src="./images/olga.jpg" 
-                    alt="Ольга Репина"
-                    width="270"
-                    height="260">
-                    <h3 class="command-name">Ольга Репина</h3>
-                    <p class="command-name skills">Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="./images/nikolay.jpg" 
-                    alt="Николай Тарасов" 
-                    width="270" 
-                    height="260">
-                    <h3 class="command-name">Николай Тарасов</h3>
-                    <p class="command-name skills">Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/mikhail.jpg" 
-                    alt="Михаил Ермаков"
-                    width="270"
-                    height="260">
-                    <h3 class="command-name">Михаил Ермаков</h3>
-                    <p class="command-name skills">UI Designer</p>
-                </li>
-            </ul>
+        <section class="section command">
+            <div class="container">
+                <h2 class="command-title">Наша команда</h2>
+                <ul class="command-item list">
+                    <li class="comand-list">
+                        <img src="./images/igor.jpg" alt="Игорь Демьяненко" width="270" height="260"  class="cmd-img">
+                        <h3 class="command-name">Игорь Демьяненко</h3>
+                        <p class="command-name skills">Product Designer</p>
+                    </li>
+                    <li class="comand-list">
+                        <img src="./images/olga.jpg" alt="Ольга Репина" width="270" height="260" class="cmd-img">
+                        <h3 class="command-name">Ольга Репина</h3>
+                        <p class="command-name skills">Frontend Developer</p>
+                    </li>
+                    <li class="comand-list">
+                        <img src="./images/nikolay.jpg" alt="Николай Тарасов" width="270" height="260" class="cmd-img">
+                        <h3 class="command-name">Николай Тарасов</h3>
+                        <p class="command-name skills">Marketing</p>
+                    </li>
+                    <li class="comand-list">
+                        <img src="./images/mikhail.jpg" alt="Михаил Ермаков" width="270" height="260" class="cmd-img">
+                        <h3 class="command-name">Михаил Ермаков</h3>
+                        <p class="command-name skills">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
 
