--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <section class="section work">
            <div class="container">
                 <h2 class="work-title">Чем мы занимаемся</h2>
-                <ul class="list">
+                <ul class="work-list list">
                     <li class="work-item">
                         <img src="./images/markup.jpg" alt="разметка" width="370" height="294" class="work-img">
                     </li>
@@ -141,26 +141,31 @@
 
     <!-- Футер -->
     <footer class="footer">
-        <a href="/" class="logo">
-            Web<span class="footer-logo">Studio</span>
-        </a>
+        <div class="container">
 
-        <!-- адрес, контакты -->
-        <address>
-            <ul class="list">
-                <li>
-                    <a href="https://goo.gl/maps/6sR1YWTJnG8Z933q6" target="_blank" rel="noreferrer noopener" class="footer-addr">
-                        г. Киев, пр-т Леси Украинки, 26
-                    </a>
-                </li>
-                <li>
-                    <a href="mailto:info@example.com" class="footer-addr cont">info@example.com</a>
-                </li>
-                <li>
-                    <a href="tel:+380991111111" class="footer-addr cont">+38 099 111 11 11</a>
-                </li>
-            </ul>
-        </address>
+            <div class="logo-foot">
+                <a href="/" class="logo">
+                    Web<span class="footer-logo">Studio</span>
+                </a>
+            </div>
+            <!-- адрес, контакты -->
+            <address>
+                <ul class="list">
+                    <li class="addr-list">
+                        <a href="https://goo.gl/maps/6sR1YWTJnG8Z933q6" target="_blank" rel="noreferrer noopener"
+                            class="footer-addr">
+                            г. Киев, пр-т Леси Украинки, 26
+                        </a>
+                    </li>
+                    <li class="addr-list">
+                        <a href="mailto:info@example.com" class="footer-addr cont">info@example.com</a>
+                    </li>
+                    <li class="addr-list">
+                        <a href="tel:+380991111111" class="footer-addr cont">+38 099 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 
