--- a/portfolio.html
+++ b/portfolio.html
@@ -13,123 +13,133 @@
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
 
+    <link rel="stylesheet" href="css/modern-normalize.css">
+
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <!-- Шапка страницы -->
-    <header>
+    <header class="header">
 
-        <!-- логотип и навигация -->
-        <nav>
+        <div class="container cont-header">
+            <!-- логотип и навигация -->
+            <nav class="nav">
 
-            <a href="/" class="logo">
-                Web<span class="nav-logo">Studio</span>
-            </a>
+                <a href="/" class="logo">
+                    Web<span class="nav-logo">Studio</span>
+                </a>
 
-            <ul class="site-nav list">
-                <li><a href="index.html" class="link ">Студия</a></li>
-                <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-                <li><a href="" class="link">Контакты</a></li>
+                <ul class="site-nav list">
+                    <li class="item"><a href="" class="link current">Студия</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li class="item"><a href="" class="link">Контакты</a></li>
+                </ul>
+
+            </nav>
+
+            <ul class="nav-contacts list">
+                <li class="item">
+                    <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                </li>
+                <li class="item">
+                    <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+                </li>
+
             </ul>
-
-        </nav>
-
-        <ul class="nav-contacts list">
-            <li>
-                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-            </li>
-        </ul>
+        </div>
 
     </header>
 
     <main>
-        <section class="content">
-            <h1 hidden>Контент</h1>
-            <ul class="content-filter list">
-                <li><button type="button" class="filter-btn">Все</button></li>
-                <li><button type="button" class="filter-btn">Веб-сайты</button></li>
-                <li><button type="button" class="filter-btn">Приложения</button></li>
-                <li><button type="button" class="filter-btn">Дизайн</button></li>
-                <li><button type="button" class="filter-btn">Маркетинг</button></li>
-            </ul>
-            <ul class="content-item list">
-                <li>
-                    <img src="./images/tehno.jpg" alt="технокряк"  width="370">
-                    <h2 class="content-title">Технокряк</h2>
-                    <p class="content-text">Веб-сайт</p>
-                </li>
-                <li>
-                    <img src="./images/golden-star.jpg" alt="постер голден стар" width="370">
-                    <h2 class="content-title">Постер New Orlean vs Golden Star</h2>
-                    <p class="content-text">Дизайн</p>
-                </li>
-                <li>
-                    <img src="./images/seefood.jpg" alt="ресторан сифуд" width="370">
-                    <h2 class="content-title">Ресторан Seafood</h2>
-                    <p class="content-text">Дизайн</p>
-                </li>
-                <li>
-                    <img src="./images/prime.jpg" alt="прайм" width="370">
-                    <h2 class="content-title">Проект Prime</h2>
-                    <p class="content-text">Маркетинг</p>
-                </li>
-                <li>
-                    <img src="./images/boxes.jpg" alt="коробки" width="370">
-                    <h2 class="content-title">Проект Boxes</h2>
-                    <p class="content-text">Приложение</p>
-                </li>
-                <li>
-                    <img src="./images/inspiration.jpg" alt="веб-сайт" width="370">
-                    <h2 class="content-title">Inspiration has no Borders</h2>
-                    <p class="content-text">Веб-сайт</p>
-                </li>
-                <li>
-                    <img src="./images/limited.jpg" alt="журнал" width="370">
-                    <h2 class="content-title">Издание Limited Edition</h2>
-                    <p class="content-text">Дизайн</p>
-                </li>
-                <li>
-                    <img src="./images/lab.jpg" alt="проект" width="370">
-                    <h2 class="content-title">Проект LAB</h2>
-                    <p class="content-text">Маркетинг</p>
-                </li>
-                <li>
-                    <img src="./images/busines.jpg" alt="бизнес страничка" width="370">
-                    <h2 class="content-title">Growing Business</h2>
-                    <p class="content-text">Приложение</p>
-                </li>
-            </ul>
+        <section class="section content">
+            <div class="container">
+                <h1 hidden>Контент</h1>
+                <ul class="content-filter list">
+                    <li class="filter-item"><button type="button" class="filter-btn active">Все</button></li>
+                    <li class="filter-item"><button type="button" class="filter-btn">Веб-сайты</button></li>
+                    <li class="filter-item"><button type="button" class="filter-btn">Приложения</button></li>
+                    <li class="filter-item"><button type="button" class="filter-btn">Дизайн</button></li>
+                    <li class="filter-item"><button type="button" class="filter-btn">Маркетинг</button></li>
+                </ul>
+                <ul class="content-item list">
+                    <li>
+                        <img src="./images/tehno.jpg" alt="технокряк" width="370">
+                        <h2 class="content-title">Технокряк</h2>
+                        <p class="content-text">Веб-сайт</p>
+                    </li>
+                    <li>
+                        <img src="./images/golden-star.jpg" alt="постер голден стар" width="370">
+                        <h2 class="content-title">Постер New Orlean vs Golden Star</h2>
+                        <p class="content-text">Дизайн</p>
+                    </li>
+                    <li>
+                        <img src="./images/seefood.jpg" alt="ресторан сифуд" width="370">
+                        <h2 class="content-title">Ресторан Seafood</h2>
+                        <p class="content-text">Дизайн</p>
+                    </li>
+                    <li>
+                        <img src="./images/prime.jpg" alt="прайм" width="370">
+                        <h2 class="content-title">Проект Prime</h2>
+                        <p class="content-text">Маркетинг</p>
+                    </li>
+                    <li>
+                        <img src="./images/boxes.jpg" alt="коробки" width="370">
+                        <h2 class="content-title">Проект Boxes</h2>
+                        <p class="content-text">Приложение</p>
+                    </li>
+                    <li>
+                        <img src="./images/inspiration.jpg" alt="веб-сайт" width="370">
+                        <h2 class="content-title">Inspiration has no Borders</h2>
+                        <p class="content-text">Веб-сайт</p>
+                    </li>
+                    <li>
+                        <img src="./images/limited.jpg" alt="журнал" width="370">
+                        <h2 class="content-title">Издание Limited Edition</h2>
+                        <p class="content-text">Дизайн</p>
+                    </li>
+                    <li>
+                        <img src="./images/lab.jpg" alt="проект" width="370">
+                        <h2 class="content-title">Проект LAB</h2>
+                        <p class="content-text">Маркетинг</p>
+                    </li>
+                    <li>
+                        <img src="./images/busines.jpg" alt="бизнес страничка" width="370">
+                        <h2 class="content-title">Growing Business</h2>
+                        <p class="content-text">Приложение</p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
+<!-- Футер -->
+<footer class="footer">
+    <div class="container">
 
-    <!-- Футер -->
-    <footer class="footer">
-        <a href="/" class="logo">
-            Web<span class="footer-logo">Studio</span>
-        </a>
-
+        <div class="logo-foot">
+            <a href="/" class="logo">
+                Web<span class="footer-logo">Studio</span>
+            </a>
+        </div>
         <!-- адрес, контакты -->
         <address>
             <ul class="list">
-                <li>
+                <li class="addr-list">
                     <a href="https://goo.gl/maps/6sR1YWTJnG8Z933q6" target="_blank" rel="noreferrer noopener"
                         class="footer-addr">
                         г. Киев, пр-т Леси Украинки, 26
                     </a>
                 </li>
-                <li>
+                <li class="addr-list">
                     <a href="mailto:info@example.com" class="footer-addr cont">info@example.com</a>
                 </li>
-                <li>
+                <li class="addr-list">
                     <a href="tel:+380991111111" class="footer-addr cont">+38 099 111 11 11</a>
                 </li>
             </ul>
         </address>
-    </footer>
+    </div>
+</footer>
 </body>
 
 </html>
