--- a/portfolio.html
+++ b/portfolio.html
@@ -31,8 +31,8 @@
                 </a>
 
                 <ul class="site-nav list">
-                    <li class="item"><a href="" class="link current">Студия</a></li>
-                    <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li class="item"><a href="./index.html" class="link">Студия</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
                     <li class="item"><a href="" class="link">Контакты</a></li>
                 </ul>
 
@@ -63,50 +63,104 @@
                     <li class="filter-item"><button type="button" class="filter-btn">Маркетинг</button></li>
                 </ul>
                 <ul class="content-item list">
-                    <li>
-                        <img src="./images/tehno.jpg" alt="технокряк" width="370">
-                        <h2 class="content-title">Технокряк</h2>
-                        <p class="content-text">Веб-сайт</p>
+                    <li class="content-list">
+                        <article class="content-card">
+                            <div class="cont-img">
+                                <img src="./images/tehno.jpg" alt="технокряк" width="370">
+                            </div>
+                            <div class="cont-description">
+                                <h2 class="content-title">Технокряк</h2>
+                                <p class="content-text">Веб-сайт</p>
+                            </div>
+                        </article>
                     </li>
-                    <li>
-                        <img src="./images/golden-star.jpg" alt="постер голден стар" width="370">
-                        <h2 class="content-title">Постер New Orlean vs Golden Star</h2>
-                        <p class="content-text">Дизайн</p>
+                    <li class="content-list">
+                        <article class="content-card">
+                            <div class="cont-img">
+                                <img src="./images/golden-star.jpg" alt="постер голден стар" width="370">
+                            </div> 
+                            <div class="cont-description">
+                                <h2 class="content-title">Постер New Orlean vs Golden Star</h2>
+                                <p class="content-text">Дизайн</p>
+                            </div>
+                        </article>
                     </li>
-                    <li>
-                        <img src="./images/seefood.jpg" alt="ресторан сифуд" width="370">
-                        <h2 class="content-title">Ресторан Seafood</h2>
-                        <p class="content-text">Дизайн</p>
+                    <li class="content-list">
+                        <article class="content-card">
+                            <div class="cont-img">
+                                <img src="./images/seefood.jpg" alt="ресторан сифуд" width="370">
+                            </div>
+                            <div class="cont-description">
+                                <h2 class="content-title">Ресторан Seafood</h2>
+                                <p class="content-text">Дизайн</p>
+                            </div>
+                        </article>
                     </li>
-                    <li>
-                        <img src="./images/prime.jpg" alt="прайм" width="370">
-                        <h2 class="content-title">Проект Prime</h2>
-                        <p class="content-text">Маркетинг</p>
+                    <li class="content-list">
+                        <article class="content-card">
+                            <div class="cont-img">
+                                <img src="./images/prime.jpg" alt="прайм" width="370">
+                            </div>
+                            <div class="cont-description">
+                                <h2 class="content-title">Проект Prime</h2>
+                                <p class="content-text">Маркетинг</p>
+                            </div>
+                        </article>
                     </li>
-                    <li>
-                        <img src="./images/boxes.jpg" alt="коробки" width="370">
-                        <h2 class="content-title">Проект Boxes</h2>
-                        <p class="content-text">Приложение</p>
+                    <li class="content-list">
+                        <article class="content-card">
+                            <div class="cont-img">
+                                <img src="./images/boxes.jpg" alt="коробки" width="370">
+                            </div>
+                            <div class="cont-description">
+                                <h2 class="content-title">Проект Boxes</h2>
+                                <p class="content-text">Приложение</p>
+                            </div>
+                        </article>
                     </li>
-                    <li>
-                        <img src="./images/inspiration.jpg" alt="веб-сайт" width="370">
-                        <h2 class="content-title">Inspiration has no Borders</h2>
-                        <p class="content-text">Веб-сайт</p>
+                    <li class="content-list">
+                        <article class="content-card">
+                            <div class="cont-img">
+                                <img src="./images/inspiration.jpg" alt="веб-сайт" width="370">
+                            </div>
+                            <div class="cont-description">
+                                <h2 class="content-title">Inspiration has no Borders</h2>
+                                <p class="content-text">Веб-сайт</p>
+                            </div>
+                        </article>
                     </li>
-                    <li>
-                        <img src="./images/limited.jpg" alt="журнал" width="370">
-                        <h2 class="content-title">Издание Limited Edition</h2>
-                        <p class="content-text">Дизайн</p>
+                    <li class="content-list">
+                        <article class="content-card">
+                            <div class="cont-img">
+                                <img src="./images/limited.jpg" alt="журнал" width="370">
+                            </div>
+                            <div class="cont-description">
+                                <h2 class="content-title">Издание Limited Edition</h2>
+                                <p class="content-text">Дизайн</p>
+                            </div>
+                        </article>
                     </li>
-                    <li>
-                        <img src="./images/lab.jpg" alt="проект" width="370">
-                        <h2 class="content-title">Проект LAB</h2>
-                        <p class="content-text">Маркетинг</p>
+                    <li class="content-list">
+                        <article class="content-card">
+                            <div class="cont-img">
+                                <img src="./images/lab.jpg" alt="проект" width="370">
+                            </div>
+                            <div class="cont-description">
+                                <h2 class="content-title">Проект LAB</h2>
+                                <p class="content-text">Маркетинг</p>
+                            </div>
+                        </article>
                     </li>
-                    <li>
-                        <img src="./images/busines.jpg" alt="бизнес страничка" width="370">
-                        <h2 class="content-title">Growing Business</h2>
-                        <p class="content-text">Приложение</p>
+                    <li class="content-list">
+                        <article class="content-card">
+                            <div class="cont-img">
+                                <img src="./images/busines.jpg" alt="бизнес страничка" width="370">
+                            </div>
+                            <div class="cont-description">
+                                <h2 class="content-title">Growing Business</h2>
+                                <p class="content-text">Приложение</p>
+                            </div>
+                        </article>
                     </li>
                 </ul>
             </div>
