--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
                 </ul>
                 <ul class="content-item list">
                     <li class="content-list">
-                        <article class="content-card">
+                        <a href="" class="content-card">
                             <div class="cont-img">
                                 <img src="./images/tehno.jpg" alt="технокряк" width="370">
                             </div>
@@ -72,10 +72,10 @@
                                 <h2 class="content-title">Технокряк</h2>
                                 <p class="content-text">Веб-сайт</p>
                             </div>
-                        </article>
+                        </a>
                     </li>
                     <li class="content-list">
-                        <article class="content-card">
+                        <a href="" class="content-card">
                             <div class="cont-img">
                                 <img src="./images/golden-star.jpg" alt="постер голден стар" width="370">
                             </div> 
@@ -83,10 +83,10 @@
                                 <h2 class="content-title">Постер New Orlean vs Golden Star</h2>
                                 <p class="content-text">Дизайн</p>
                             </div>
-                        </article>
+                        </a>
                     </li>
                     <li class="content-list">
-                        <article class="content-card">
+                        <a href="" class="content-card">
                             <div class="cont-img">
                                 <img src="./images/seefood.jpg" alt="ресторан сифуд" width="370">
                             </div>
@@ -94,10 +94,10 @@
                                 <h2 class="content-title">Ресторан Seafood</h2>
                                 <p class="content-text">Дизайн</p>
                             </div>
-                        </article>
+                        </a>
                     </li>
                     <li class="content-list">
-                        <article class="content-card">
+                        <a href="" class="content-card">
                             <div class="cont-img">
                                 <img src="./images/prime.jpg" alt="прайм" width="370">
                             </div>
@@ -105,10 +105,10 @@
                                 <h2 class="content-title">Проект Prime</h2>
                                 <p class="content-text">Маркетинг</p>
                             </div>
-                        </article>
+                        </a>
                     </li>
                     <li class="content-list">
-                        <article class="content-card">
+                        <a href="" class="content-card">
                             <div class="cont-img">
                                 <img src="./images/boxes.jpg" alt="коробки" width="370">
                             </div>
@@ -116,10 +116,10 @@
                                 <h2 class="content-title">Проект Boxes</h2>
                                 <p class="content-text">Приложение</p>
                             </div>
-                        </article>
+                        </a>
                     </li>
                     <li class="content-list">
-                        <article class="content-card">
+                        <a href="" class="content-card">
                             <div class="cont-img">
                                 <img src="./images/inspiration.jpg" alt="веб-сайт" width="370">
                             </div>
@@ -127,10 +127,10 @@
                                 <h2 class="content-title">Inspiration has no Borders</h2>
                                 <p class="content-text">Веб-сайт</p>
                             </div>
-                        </article>
+                        </a>
                     </li>
                     <li class="content-list">
-                        <article class="content-card">
+                        <a href="" class="content-card">
                             <div class="cont-img">
                                 <img src="./images/limited.jpg" alt="журнал" width="370">
                             </div>
@@ -138,10 +138,10 @@
                                 <h2 class="content-title">Издание Limited Edition</h2>
                                 <p class="content-text">Дизайн</p>
                             </div>
-                        </article>
+                        </a>
                     </li>
                     <li class="content-list">
-                        <article class="content-card">
+                        <a href="" class="content-card">
                             <div class="cont-img">
                                 <img src="./images/lab.jpg" alt="проект" width="370">
                             </div>
@@ -149,10 +149,10 @@
                                 <h2 class="content-title">Проект LAB</h2>
                                 <p class="content-text">Маркетинг</p>
                             </div>
-                        </article>
+                        </a>
                     </li>
                     <li class="content-list">
-                        <article class="content-card">
+                        <a href="" class="content-card">
                             <div class="cont-img">
                                 <img src="./images/busines.jpg" alt="бизнес страничка" width="370">
                             </div>
@@ -160,7 +160,7 @@
                                 <h2 class="content-title">Growing Business</h2>
                                 <p class="content-text">Приложение</p>
                             </div>
-                        </article>
+                        </a>
                     </li>
                 </ul>
             </div>
