добавляет див в команду

--- a/index.html
+++ b/index.html
@@ -118,23 +118,31 @@
                 <ul class="command-item list">
                     <li class="comand-list">
                         <img src="./images/igor.jpg" alt="Игорь Демьяненко" width="270" height="260"  class="cmd-img">
-                        <h3 class="command-name">Игорь Демьяненко</h3>
-                        <p class="command-name skills">Product Designer</p>
+                        <div class="cmd-cont">
+                            <h3 class="command-name title">Игорь Демьяненко</h3>
+                            <p class="command-name skills">Product Designer</p>
+                        </div>
                     </li>
                     <li class="comand-list">
                         <img src="./images/olga.jpg" alt="Ольга Репина" width="270" height="260" class="cmd-img">
-                        <h3 class="command-name">Ольга Репина</h3>
-                        <p class="command-name skills">Frontend Developer</p>
+                        <div class="cmd-cont">
+                            <h3 class="command-name">Ольга Репина</h3>
+                            <p class="command-name skills">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="comand-list">
                         <img src="./images/nikolay.jpg" alt="Николай Тарасов" width="270" height="260" class="cmd-img">
-                        <h3 class="command-name">Николай Тарасов</h3>
-                        <p class="command-name skills">Marketing</p>
+                        <div class="cmd-cont">
+                            <h3 class="command-name">Николай Тарасов</h3>
+                            <p class="command-name skills">Marketing</p>
+                        </div>
                     </li>
                     <li class="comand-list">
                         <img src="./images/mikhail.jpg" alt="Михаил Ермаков" width="270" height="260" class="cmd-img">
-                        <h3 class="command-name">Михаил Ермаков</h3>
-                        <p class="command-name skills">UI Designer</p>
+                        <div class="cmd-cont">
+                            <h3 class="command-name">Михаил Ермаков</h3>
+                            <p class="command-name skills">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
