добавляет класс title

--- a/index.html
+++ b/index.html
@@ -126,21 +126,21 @@
                     <li class="comand-list">
                         <img src="./images/olga.jpg" alt="Ольга Репина" width="270" height="260" class="cmd-img">
                         <div class="cmd-cont">
-                            <h3 class="command-name">Ольга Репина</h3>
+                            <h3 class="command-name title">Ольга Репина</h3>
                             <p class="command-name skills">Frontend Developer</p>
                         </div>
                     </li>
                     <li class="comand-list">
                         <img src="./images/nikolay.jpg" alt="Николай Тарасов" width="270" height="260" class="cmd-img">
                         <div class="cmd-cont">
-                            <h3 class="command-name">Николай Тарасов</h3>
+                            <h3 class="command-name title">Николай Тарасов</h3>
                             <p class="command-name skills">Marketing</p>
                         </div>
                     </li>
                     <li class="comand-list">
                         <img src="./images/mikhail.jpg" alt="Михаил Ермаков" width="270" height="260" class="cmd-img">
                         <div class="cmd-cont">
-                            <h3 class="command-name">Михаил Ермаков</h3>
+                            <h3 class="command-name title">Михаил Ермаков</h3>
                             <p class="command-name skills">UI Designer</p>
                         </div>
                     </li>
