добавляет не достающий див

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                         </p>
                     </li>
                 </ul>
+            </div>
         </section>
 
                     <!-- Чем мы занимаемся-->
